+ add jdk 17 in appveyor ubuntu CI